Retrofit Liste Objets ok

--- a/web/docs/03-recettes/retrofit-02-objet.mdx
+++ b/web/docs/03-recettes/retrofit-02-objet.mdx
@@ -4,11 +4,13 @@ hide_table_of_contents: true
 
 # Retrofit 2 - HTTP depuis une activité
 
+:::tip
 ATTENTION : L'outil principal de débogage pour les appels réseaux est le network inspector dans Android Studio.
 1. Cliquer sur Fichier / File ou le symbole  ☰ en haut à gauche
 2. Choisir View / Tool Windows / AppInspection
 3. Dans la fenêtre AppInspection, choisir l'onglet **Network Inspector**
 4. Tu devrais voir apparaître les appels réseaux de ton application
+:::
 
 Regarder la recette de base pour les étapes:
 - [AndroidManifest.xml](retrofit-01-base?recette-string=AndroidManifest.xml)
