Titres pour le sidebar

--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -3,7 +3,7 @@ hide_table_of_contents: true
 ---
 
 
-# Travail 1 : Client Android 
+# TP1 : Client Android 
 
 <Row>
 
@@ -50,9 +50,6 @@ Activité d'inscription permet à l'utilisateur de créer un compte.
 - Un champ pour la confirmation du mot de passe qui est caché (.....)
 - Un bouton inscription qui mène à l'activité d'accueil (un utilisateur qui crée un compte est automatiquement connecté)
 
-</Column>
-
-<Column>
 
 ### <Highlight color="tip">2 points</Highlight> Activité de connexion
 
@@ -62,6 +59,7 @@ L'application doit démarrer sur une activité connexion.
 - Un champ pour le mot de passe qui est caché (.....)
 - Un bouton de connexion qui amène à l'activité d'accueil
 - Un bouton inscription qui mène à l'activité d'inscription
+
 
 </Column>
 
@@ -134,9 +132,11 @@ On a le nom de l'utilisateur courant affiché (codé en dur). Il y a les options
 
 <Column>
 
-### Mises à jour de l'interface
+### Logo
 
 &#8203;<Highlight color="tip">1 point</Highlight> Ajouter un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
+
+### Portrait et paysage
 
 &#8203;<Highlight color="danger">Notation négative!</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez 1 point pour chaque activité où un élément n'est pas accessible ou fonctionnel dans un ou l'autre des modes portrait et paysage.
 
