--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -2,7 +2,7 @@
 hide_table_of_contents: true
 ---
 
-# Travail 3 : Améliorations
+# TP3 : CTF et suppression
 
 
 &#8203;<Highlight color="tip">1 point</Highlight> **Git** Un minimum de 4 commits de tailles comparables.
