--- a/web/docs/03-recettes/retrofit-03-liste.mdx
+++ b/web/docs/03-recettes/retrofit-03-liste.mdx
@@ -2,7 +2,7 @@
 hide_table_of_contents: true
 ---
 
-# Retrofit 3 - HTTP avec une liste d'objets
+# HTTP 3 - liste d'objets
 
 :::tip
 ATTENTION : L'outil principal de débogage pour les appels réseaux est le network inspector dans Android Studio.
