--- a/web/docs/03-recettes/retrofit-04-cookie.mdx
+++ b/web/docs/03-recettes/retrofit-04-cookie.mdx
@@ -2,7 +2,7 @@
 hide_table_of_contents: true
 ---
 
-# Retrofit - Appels HTTP gestion des sessions / cookies
+# HTTP 4 - cookies / sessions
 
 ATTENTION : L'outil principal de débogage pour les appels réseaux est le network inspector dans Android Studio.
 1. Cliquer sur Fichier / File ou le symbole  ☰ en haut à gauche
