--- a/web/docs/03-recettes/retrofit-04-post.mdx
+++ b/web/docs/03-recettes/retrofit-04-post.mdx
@@ -2,7 +2,7 @@
 hide_table_of_contents: true
 ---
 
-# Retrofit - Appels HTTP sur un objet complexe
+# HTTP 5 - Envoi en POST
 
 ATTENTION : L'outil principal de débogage pour les appels réseaux est le network inspector dans Android Studio.
 1. Cliquer sur Fichier / File ou le symbole  ☰ en haut à gauche
