--- a/web/docs/03-recettes/retrofit-01-base.mdx
+++ b/web/docs/03-recettes/retrofit-01-base.mdx
@@ -2,7 +2,7 @@
 hide_table_of_contents: true
 ---
 
-# Retrofit 1 - Appels HTTP de base
+# HTTP 1 - Retrofit de base
 
 :::tip
 ATTENTION : L'outil principal de débogage pour les appels réseaux est le network inspector dans Android Studio.
