Mise en page, quelques petites reformulations.

--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -11,15 +11,11 @@ hide_table_of_contents: true
 
 Vous allez mettre en place l'application en commençant par **l'interface graphique** en version factice.
 
-</Column>
-
-<Column>
-
 ### Interface graphique
 
-- Les activités affichent toujours les mêmes données
-- Toutes les actions réussissent tout le temps
-- Il n'y a aucun message d'erreur
+- Les activités affichent toujours les mêmes données.
+- Toutes les actions réussissent tout le temps.
+- Il n'y a aucun message d'erreur.
 
 </Column>
 
@@ -31,37 +27,45 @@ Vous allez mettre en place l'application en commençant par **l'interface graphi
 Un minimum de 6 commits de tailles comparables. Au moins un commit par activité. 
 De plus, il n'y a pas un commit avec tout dedans et les autres vides. 
 Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
-Ces points sont conditionnés à la remise d'au moins un commit toutes à chaque 2 séances de cours.
+Ces points sont conditionnés à la remise d'au moins un commit par 2 séances de cours.
+
+</Column>
+
+</Row>
+
+:::note Activités
+
+<Row>
+
+<Column>
+
+### Activité de connexion <Highlight color="tip">2 points</Highlight>
+
+L'application doit démarrer sur l'activité connexion.
+
+- un champ pour le nom de l'utilisateur
+- un champ pour le mot de passe, qui est caché (.....)
+- un bouton de connexion qui amène à l'activité d'accueil
+- un bouton inscription qui mène à l'activité d'inscription
+
+</Column>
+
+<Column>
+
+### Activité d'inscription <Highlight color="tip">2 points</Highlight>
+
+L'activité d'inscription permet à l'utilisateur de créer un compte.
+
+- un champ pour le nom de l'utilisateur
+- un champ pour le mot de passe, qui est caché (.....)
+- un champ pour la confirmation du mot de passe, caché (.....)
+- un bouton inscription qui mène à l'activité d'accueil (un utilisateur qui crée un compte est automatiquement connecté)
 
 </Column>
 
 </Row>
 
 <Row>
-
-<Column>
-
-### <Highlight color="tip">2 points</Highlight> Activité d'inscription
-
-Activité d'inscription permet à l'utilisateur de créer un compte.
-
-- Un champ pour le nom de l'utilisateur
-- Un champ pour le mot de passe qui est caché (.....)
-- Un champ pour la confirmation du mot de passe qui est caché (.....)
-- Un bouton inscription qui mène à l'activité d'accueil (un utilisateur qui crée un compte est automatiquement connecté)
-
-
-### <Highlight color="tip">2 points</Highlight> Activité de connexion
-
-L'application doit démarrer sur une activité connexion.
-
-- Un champ pour le nom de l'utilisateur
-- Un champ pour le mot de passe qui est caché (.....)
-- Un bouton de connexion qui amène à l'activité d'accueil
-- Un bouton inscription qui mène à l'activité d'inscription
-
-
-</Column>
 
 <Column>
 
@@ -72,28 +76,24 @@ L'activité d'accueil affiche la liste des tâches de l'utilisateur.
 - &#8203;<Highlight color="tip">1 point</Highlight> Il faut un bouton de type *FAB* (*Floating Action Button*) qui mène à l'activité de création d'une tâche.
 - &#8203;<Highlight color="tip">1 point</Highlight> Un appui sur un item de la liste mène à l'activité de consultation.
 - &#8203;<Highlight color="tip">3 points</Highlight> Une liste en mode recyclerView. Pour chaque élément d'information, vous pouvez choisir d'afficher du texte et/ou un élément graphique. Vous devez faire preuve d'imagination pour l'affichage. Chaque item de la liste contient :
-  - Le nom de la tâche
-  - Son pourcentage d'avancement de la tâche (ex : 30%)
-  - Le pourcentage de temps écoulé entre la date de création et la date limite (en pourcentage)
-  - La date limite
+  - le nom de la tâche
+  - le pourcentage d'avancement de la tâche (ex : 30%)
+  - le pourcentage du temps écoulé entre la date de création et la date d'échéance
+  - la date d'échéance
 
 Votre activité doit montrer une liste d'au moins 200 items codés en dur avec un nom et une date de votre choix.
 
 </Column>
 
-</Row>
-
-<Row>
-
 <Column>
 
-### <Highlight color="tip">2 points</Highlight> Activité de création
+### Activité de création <Highlight color="tip">2 points</Highlight>
 
 L'activité de création permet de créer une tâche qui s'ajoutera dans la liste des tâches de l'utilisateur.
 
-- Un champ nom pour le nom de la tâche
-- Un moyen d'entrer la date d'échéance de la tâche
-- Un bouton d'ajout qui mène à l'activité d'accueil
+- un champ pour le nom de la tâche
+- un moyen d'entrer la date d'échéance de la tâche
+- un bouton d'ajout qui mène à l'activité d'accueil
 
 </Column>
 
@@ -101,17 +101,24 @@ L'activité de création permet de créer une tâche qui s'ajoutera dans la list
 
 ### Activité de consultation
 
-L'activité de consultation permet de voir le nom et la date de la tâche. Elle permet de changer le pourcentage d'avancement.
+L'activité de consultation permet de voir le nom et la date d'échéance de la tâche. Elle permet aussi de changer son pourcentage d'avancement.
 
-- &#8203;<Highlight color="tip">1 point</Highlight> Présence des éléments suivants :
-  - On voit le nom et la date d'échéance de la tâche
-  - On voit le pourcentage d'avancement
-  - On voit le temps écoulé depuis la création de la tâche
-- &#8203;<Highlight color="tip">2 points</Highlight> Il y a un moyen pour modifier le pourcentage d'avancement
+- &#8203;<Highlight color="tip">1 point</Highlight> On y voit :
+  - le nom de la tâche
+  - la date d'échéance
+  - le pourcentage d'avancement
+  - le pourcentage du temps écoulé depuis la création de la tâche
+- &#8203;<Highlight color="tip">2 points</Highlight> Il y a un moyen pour modifier le pourcentage d'avancement.
 
 Les informations affichées sont codées en dur en attendant le TP2.
 
 </Column>
+
+</Row>
+
+:::
+
+<Row>
 
 <Column>
 
@@ -121,34 +128,31 @@ Il permet d'accéder rapidement à toutes les activités principales :
 
 - &#8203;<Highlight color="tip">1 point</Highlight> Le tiroir est **présent** dans toutes les activités **SAUF** inscription et connexion.
 On a le nom de l'utilisateur courant affiché (codé en dur). Il y a les options **Accueil**, **Ajout de tâche** et **Déconnexion**.
-- &#8203;<Highlight color="tip">3 points</Highlight> Le tiroir **fonctionne** dans toutes les activités **SAUF** inscription et connexion. Accueil amène à l'activité d'Accueil, Ajout de tâche amène à l'activité d'Ajout de tâche et Déconnexion amène à l'activité de Connexion.
-- &#8203;<Highlight color="tip">1 point</Highlight> Il y a le hamburger dans l'ActionBar qui déclenche le tiroir
+- &#8203;<Highlight color="tip">3 points</Highlight> Le tiroir **fonctionne** dans toutes les activités (**SAUF** inscription et connexion). Accueil amène à l'activité d'accueil, Ajout de tâche amène à l'activité de création et Déconnexion amène à l'activité de connexion.
+- &#8203;<Highlight color="tip">1 point</Highlight> Il y a le hamburger dans l'ActionBar qui déclenche le tiroir.
 
 </Column>
-
-</Row>
-
-<Row>
 
 <Column>
 
 ### Logo
 
-&#8203;<Highlight color="tip">1 point</Highlight> Ajouter un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
+&#8203;<Highlight color="tip">1 point</Highlight> Ajoutez un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
+
+:::danger Attention!
 
 ### Portrait et paysage
 
-&#8203;<Highlight color="danger">Notation négative!</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez 1 point pour chaque activité où un élément n'est pas accessible ou fonctionnel dans un ou l'autre des modes portrait et paysage.
+&#8203;<Highlight color="danger">Notation négative!</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez &#8203;<Highlight color="danger">1 point pour chaque activité</Highlight> où un élément n'est pas accessible ou fonctionnel dans l'un ou l'autre des modes portrait et paysage.
 
-</Column>
-
-<Column>
+:::
 
 ### Multilingue
 
 &#8203;<Highlight color="tip">2 points</Highlight> Vous devez traduire tous les textes de l'interface graphique existante en français et anglais.
 
 L'orthographe doit être correcte, les textes ne doivent pas contenir de fautes dans la version française.
+
 </Column>
 
 </Row>
