--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -25,8 +25,9 @@ Vous allez mettre en place l'application en commençant par **l'interface graphi
 
 &#8203;<Highlight color="tip">2 points</Highlight> 
 Un minimum de 6 commits de tailles comparables. Au moins un commit par activité. 
-De plus, il n'y a pas un commit avec tout dedans et les autres vides. 
-Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
+
+Il n'y a pas un commit avec tout dedans et les autres vides. Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
+
 Ces points sont conditionnés à la remise d'au moins un commit par 2 séances de cours.
 
 </Column>
