--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -32,9 +32,10 @@ Dans la phase 2, vous connecterez votre interface graphique de la phase 1 au ser
 
 &#8203;<Highlight color="tip">2 points</Highlight> Un minimum de 6 commits de tailles comparables. Tu peux viser un commit par appel au serveur implanté.
 
-Il n'y a pas un commit avec tout dedans et les autres vides. Les commits décrivent l'avancement du projet dans un français correct (passe Word).
+Il n'y a pas un commit avec tout dedans et les autres vides. Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
 
-Ces points sont conditionnés à la remise d'au moins un commit toutes à chaque 2 séances de cours.
+Ces points sont conditionnés à la remise d'au moins un commit par 2 séances de cours.
+
 </Column>
 
 </Row>
@@ -47,8 +48,8 @@ Ces points sont conditionnés à la remise d'au moins un commit toutes à chaque
 
 Vous devez effectuer les appels de connexion et d'inscription depuis les écrans correspondant.
 
-- &#8203;<Highlight color="tip">2 points</Highlight> **`/api/id/signin`** en **POST**, classes de transfert sont SigninRequest et SigninResponse
-- &#8203;<Highlight color="tip">2 points</Highlight> **`/api/id/signup`** en **POST**, classes de transfert sont SignupRequest et SigninResponse
+- &#8203;<Highlight color="tip">2 points</Highlight> **`/api/id/signin`** en **POST**, classes de transfert sont SigninRequest et SigninResponse.
+- &#8203;<Highlight color="tip">2 points</Highlight> **`/api/id/signup`** en **POST**, classes de transfert sont SignupRequest et SigninResponse.
 
 La classe de réponse est la même pour les 2 car une inscription effectue également la connexion, il s'agit de SigninResponse.
 
@@ -64,7 +65,7 @@ Vous devez vous assurer que votre application gère correctement les cookies, c'
 
 La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonctionnelle dans toutes les activités avec le tiroir.
 
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/id/signout`** en **POST**
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/id/signout`** en **POST**.
 - &#8203;<Highlight color="tip">1 point</Highlight> La déconnexion fonctionne dans toutes les activités avec tiroir de navigation.
 
 </Column>
@@ -73,12 +74,12 @@ La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonct
 
 ### Liste et création de tâche
 
-**ATTENTION SI VOUS NE FAITES PAS INSCRIPTION ET CONNEXION, VOUS NE POURREZ PAS FAIRE LES OPÉRATIONS SUIVANTES.**
+**ATTENTION : SI VOUS NE FAITES PAS INSCRIPTION ET CONNEXION, VOUS NE POURREZ PAS FAIRE LES OPÉRATIONS SUIVANTES.**
 
-Vous codez l'appel qui permet de récupérer la liste des tâches sur l'écran d'accueil ainsi que la création d'une nouvelle tâche. Les appels sont authentifiés, vous n'avez pas à gérer les messages d'erreur (ce sera dans la phase 3).
+Vous codez les appels qui permettent de récupérer la liste des tâches pour l'écran d'accueil et de créer une nouvelle tâche. Les appels sont authentifiés, vous n'avez pas à gérer les messages d'erreur (ce sera dans la phase 3).
 
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/add`** en **POST**, envoie un AddTaskRequest et ne reçoit rien
-- &#8203;<Highlight color="tip">2 points</Highlight> **`/api/home`** en **GET**, n'envoie rien (identifié grâce à ton cookie), reçoit une liste de HomeItemResponse
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/add`** en **POST**, envoie un AddTaskRequest et ne reçoit rien.
+- &#8203;<Highlight color="tip">2 points</Highlight> **`/api/home`** en **GET**, n'envoie rien (identifié grâce à ton cookie), reçoit une liste de HomeItemResponse.
 
 </Column>
 
@@ -90,12 +91,12 @@ Vous codez l'appel qui permet de récupérer la liste des tâches sur l'écran d
 
 ### Consultation et avancement
 
-**ATTENTION SI VOUS NE POUVEZ PAS CRÉER DE TÂCHE, VOUS NE POURREZ PAS FAIRE LA SUITE.**
+**ATTENTION : SI VOUS NE POUVEZ PAS CRÉER DE TÂCHE, VOUS NE POURREZ PAS FAIRE LA SUITE.**
 
 Vous codez les appels pour l'écran de consultation / modification d'une tâche.
 
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/detail/{id}`** GET envoie l'id de la tâche et reçoit un TaskDetailResponse. Permet la récupération du détail de la tâche.
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/progress/{id}/{valeur}`** GET envoie l'id de la tâche et la nouvelle valeur d'avancement entre 0 et 100. Permet de changer le pourcentage d'avancement
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/detail/{id}`** en **GET**, envoie l'id de la tâche et reçoit un TaskDetailResponse. Permet la récupération du détail de la tâche.
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/progress/{id}/{valeur}`** en **GET**, envoie l'id de la tâche et la nouvelle valeur d'avancement entre 0 et 100. Permet de changer le pourcentage d'avancement.
 
 </Column>
 
@@ -104,7 +105,7 @@ Vous codez les appels pour l'écran de consultation / modification d'une tâche.
 ### Déploiement du code serveur sur une instance cloud
 
 <Highlight color="tip">2 points</Highlight> Déployez le code du serveur sur une instance Render.
-Vous indiquerez l'url de votre serveur dans un fichier **url-serveur.md** à la racine du projet.
+Vous indiquerez l'URL de votre serveur dans un fichier **url-serveur.md** à la racine du projet.
 
 
 <Highlight color="tip">1 point</Highlight> Le projet remis pointe vers votre instance cloud (Render).
@@ -124,6 +125,6 @@ Vous indiquerez l'url de votre serveur dans un fichier **url-serveur.md** à la 
 - Plantage de l'application <Highlight color="danger">-1 point</Highlight>
 - Interface illisible <Highlight color="danger">-1 point</Highlight>
 - Information affichée incohérente <Highlight color="danger">-1 point</Highlight>
-- Autre cas ...
+- Autre cas...
 
 :::
