--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -21,7 +21,7 @@ Vous allez mettre en place l'application en commençant par **l'interface graphi
 
 <Column>
 
-### Repository Git
+:::note Repository Git
 
 &#8203;<Highlight color="tip">2 points</Highlight> 
 Un minimum de 6 commits de tailles comparables. Au moins un commit par activité. 
@@ -30,17 +30,19 @@ Il n'y a pas un commit avec tout dedans et les autres vides. Les commits décriv
 
 Ces points sont conditionnés à la remise d'au moins un commit par 2 séances de cours.
 
+:::
+
 </Column>
 
 </Row>
 
-:::note Activités
+### Activités
 
 <Row>
 
 <Column>
 
-### Activité de connexion <Highlight color="tip">2 points</Highlight>
+:::info Activité de connexion <Highlight color="tip">2 points</Highlight>
 
 L'application doit démarrer sur l'activité connexion.
 
@@ -49,11 +51,13 @@ L'application doit démarrer sur l'activité connexion.
 - un bouton de connexion qui amène à l'activité d'accueil
 - un bouton inscription qui mène à l'activité d'inscription
 
+:::
+
 </Column>
 
 <Column>
 
-### Activité d'inscription <Highlight color="tip">2 points</Highlight>
+:::info Activité d'inscription <Highlight color="tip">2 points</Highlight>
 
 L'activité d'inscription permet à l'utilisateur de créer un compte.
 
@@ -61,6 +65,8 @@ L'activité d'inscription permet à l'utilisateur de créer un compte.
 - un champ pour le mot de passe, qui est caché (.....)
 - un champ pour la confirmation du mot de passe, caché (.....)
 - un bouton inscription qui mène à l'activité d'accueil (un utilisateur qui crée un compte est automatiquement connecté)
+
+:::
 
 </Column>
 
@@ -70,7 +76,7 @@ L'activité d'inscription permet à l'utilisateur de créer un compte.
 
 <Column>
 
-### Activité d'accueil
+:::info Activité d'accueil
 
 L'activité d'accueil affiche la liste des tâches de l'utilisateur.
 
@@ -84,11 +90,13 @@ L'activité d'accueil affiche la liste des tâches de l'utilisateur.
 
 Votre activité doit montrer une liste d'au moins 200 items codés en dur avec un nom et une date de votre choix.
 
+:::
+
 </Column>
 
 <Column>
 
-### Activité de création <Highlight color="tip">2 points</Highlight>
+:::info Activité de création <Highlight color="tip">2 points</Highlight>
 
 L'activité de création permet de créer une tâche qui s'ajoutera dans la liste des tâches de l'utilisateur.
 
@@ -96,11 +104,13 @@ L'activité de création permet de créer une tâche qui s'ajoutera dans la list
 - un moyen d'entrer la date d'échéance de la tâche
 - un bouton d'ajout qui mène à l'activité d'accueil
 
+:::
+
 </Column>
 
 <Column>
 
-### Activité de consultation
+:::info Activité de consultation
 
 L'activité de consultation permet de voir le nom et la date d'échéance de la tâche. Elle permet aussi de changer son pourcentage d'avancement.
 
@@ -113,17 +123,17 @@ L'activité de consultation permet de voir le nom et la date d'échéance de la 
 
 Les informations affichées sont codées en dur en attendant le TP2.
 
+:::
+
 </Column>
 
 </Row>
-
-:::
 
 <Row>
 
 <Column>
 
-### Tiroir de navigation
+:::note Tiroir de navigation
 
 Il permet d'accéder rapidement à toutes les activités principales :
 
@@ -132,36 +142,38 @@ On a le nom de l'utilisateur courant affiché (codé en dur). Il y a les options
 - &#8203;<Highlight color="tip">3 points</Highlight> Le tiroir **fonctionne** dans toutes les activités (**SAUF** inscription et connexion). Accueil amène à l'activité d'accueil, Ajout de tâche amène à l'activité de création et Déconnexion amène à l'activité de connexion.
 - &#8203;<Highlight color="tip">1 point</Highlight> Il y a le hamburger dans l'ActionBar qui déclenche le tiroir.
 
+:::
+
 </Column>
 
 <Column>
 
-### Logo
+:::note Logo
 
 &#8203;<Highlight color="tip">1 point</Highlight> Ajoutez un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
 
-:::danger Attention!
+:::
 
-### Portrait et paysage
+:::danger Portrait et paysage
 
 &#8203;<Highlight color="danger">Notation négative!</Highlight> Votre projet doit être lisible et fonctionnel en mode portrait ET paysage pour chaque activité. Vous perdez &#8203;<Highlight color="danger">1 point pour chaque activité</Highlight> où un élément n'est pas accessible ou fonctionnel dans l'un ou l'autre des modes portrait et paysage.
 
 :::
 
-### Multilingue
+:::note Multilingue
 
 &#8203;<Highlight color="tip">2 points</Highlight> Vous devez traduire tous les textes de l'interface graphique existante en français et anglais.
 
 L'orthographe doit être correcte, les textes ne doivent pas contenir de fautes dans la version française.
+
+:::
 
 </Column>
 
 </Row>
 
 
-:::danger Attention!
-
-### Fonctionnement global
+:::danger Fonctionnement global
 
 &#8203;<Highlight color="danger">4 points négatifs</Highlight> Votre application doit fonctionner sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 4. Essayez votre application sur un téléphone 5 pouces (Pixel 2) en mode portrait.
 
