--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -28,13 +28,15 @@ Dans la phase 2, vous connecterez votre interface graphique de la phase 1 au ser
 
 <Column>
 
-### Repository Git
+:::note Repository Git
 
 &#8203;<Highlight color="tip">2 points</Highlight> Un minimum de 6 commits de tailles comparables. Tu peux viser un commit par appel au serveur implanté.
 
 Il n'y a pas un commit avec tout dedans et les autres vides. Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
 
 Ces points sont conditionnés à la remise d'au moins un commit par 2 séances de cours.
+
+:::
 
 </Column>
 
@@ -44,7 +46,7 @@ Ces points sont conditionnés à la remise d'au moins un commit par 2 séances d
 
 <Column>
 
-### Inscription et connexion
+:::info Inscription et connexion
 
 Vous devez effectuer les appels de connexion et d'inscription depuis les écrans correspondant.
 
@@ -57,22 +59,26 @@ Vous devez vous assurer que votre application gère correctement les cookies, c'
 
 &#8203;<Highlight color="tip">2 points</Highlight> Suite à inscription, votre tiroir doit afficher le nom d'utilisateur récupéré à la connexion. Nous vous recommandons de le stocker dans un singleton pour y avoir accès de toutes les activités.
 
+:::
+
 </Column>
 
 <Column>
 
-### Déconnexion
+:::info Déconnexion
 
 La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonctionnelle dans toutes les activités avec le tiroir.
 
 - &#8203;<Highlight color="tip">1 point</Highlight> **`/api/id/signout`** en **POST**.
 - &#8203;<Highlight color="tip">1 point</Highlight> La déconnexion fonctionne dans toutes les activités avec tiroir de navigation.
 
+:::
+
 </Column>
 
 <Column>
 
-### Liste et création de tâche
+:::info Liste et création de tâche
 
 **ATTENTION : SI VOUS NE FAITES PAS INSCRIPTION ET CONNEXION, VOUS NE POURREZ PAS FAIRE LES OPÉRATIONS SUIVANTES.**
 
@@ -80,6 +86,8 @@ Vous codez les appels qui permettent de récupérer la liste des tâches pour l'
 
 - &#8203;<Highlight color="tip">1 point</Highlight> **`/api/add`** en **POST**, envoie un AddTaskRequest et ne reçoit rien.
 - &#8203;<Highlight color="tip">2 points</Highlight> **`/api/home`** en **GET**, n'envoie rien (identifié grâce à ton cookie), reçoit une liste de HomeItemResponse.
+
+:::
 
 </Column>
 
@@ -89,7 +97,7 @@ Vous codez les appels qui permettent de récupérer la liste des tâches pour l'
 
 <Column>
 
-### Consultation et avancement
+:::info Consultation et avancement
 
 **ATTENTION : SI VOUS NE POUVEZ PAS CRÉER DE TÂCHE, VOUS NE POURREZ PAS FAIRE LA SUITE.**
 
@@ -98,17 +106,20 @@ Vous codez les appels pour l'écran de consultation / modification d'une tâche.
 - &#8203;<Highlight color="tip">1 point</Highlight> **`/api/detail/{id}`** en **GET**, envoie l'id de la tâche et reçoit un TaskDetailResponse. Permet la récupération du détail de la tâche.
 - &#8203;<Highlight color="tip">1 point</Highlight> **`/api/progress/{id}/{valeur}`** en **GET**, envoie l'id de la tâche et la nouvelle valeur d'avancement entre 0 et 100. Permet de changer le pourcentage d'avancement.
 
+:::
+
 </Column>
 
 <Column>
 
-### Déploiement du code serveur sur une instance cloud
+:::note Déploiement du code serveur sur une instance cloud
 
 <Highlight color="tip">2 points</Highlight> Déployez le code du serveur sur une instance Render.
 Vous indiquerez l'URL de votre serveur dans un fichier **url-serveur.md** à la racine du projet.
 
-
 <Highlight color="tip">1 point</Highlight> Le projet remis pointe vers votre instance cloud (Render).
+
+:::
 
 </Column>
 
@@ -116,9 +127,7 @@ Vous indiquerez l'URL de votre serveur dans un fichier **url-serveur.md** à la 
 
 </Row>
 
-:::danger Attention!
-
-### Fonctionnement global
+:::danger Fonctionnement global
 
 &#8203;<Highlight color="danger">4 points négatifs</Highlight> Votre application doit fonctionner sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 4. Essayez votre application sur un téléphone 5 pouces (Pixel 2) en mode portrait.
 
