--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -65,29 +65,35 @@ Vous devez vous assurer que votre application gère correctement les cookies, c'
 
 <Column>
 
-:::info Déconnexion
+::::info Liste et création de tâche
 
-La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonctionnelle dans toutes les activités avec le tiroir.
-
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/id/signout`** en **POST**.
-- &#8203;<Highlight color="tip">1 point</Highlight> La déconnexion fonctionne dans toutes les activités avec tiroir de navigation.
-
+:::warning ATTENTION
+SI VOUS NE FAITES PAS INSCRIPTION ET CONNEXION, VOUS NE POURREZ PAS FAIRE LES OPÉRATIONS SUIVANTES.
 :::
-
-</Column>
-
-<Column>
-
-:::info Liste et création de tâche
-
-**ATTENTION : SI VOUS NE FAITES PAS INSCRIPTION ET CONNEXION, VOUS NE POURREZ PAS FAIRE LES OPÉRATIONS SUIVANTES.**
 
 Vous codez les appels qui permettent de récupérer la liste des tâches pour l'écran d'accueil et de créer une nouvelle tâche. Les appels sont authentifiés, vous n'avez pas à gérer les messages d'erreur (ce sera dans la phase 3).
 
 - &#8203;<Highlight color="tip">1 point</Highlight> **`/api/add`** en **POST**, envoie un AddTaskRequest et ne reçoit rien.
 - &#8203;<Highlight color="tip">2 points</Highlight> **`/api/home`** en **GET**, n'envoie rien (identifié grâce à ton cookie), reçoit une liste de HomeItemResponse.
 
+::::
+
+</Column>
+
+<Column>
+
+::::info Consultation et avancement
+
+:::warning ATTENTION
+SI VOUS NE POUVEZ PAS CRÉER DE TÂCHE, VOUS NE POURREZ PAS FAIRE LA SUITE.
 :::
+
+Vous codez les appels pour l'écran de consultation / modification d'une tâche.
+
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/detail/{id}`** en **GET**, envoie l'id de la tâche et reçoit un TaskDetailResponse. Permet la récupération du détail de la tâche.
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/progress/{id}/{valeur}`** en **GET**, envoie l'id de la tâche et la nouvelle valeur d'avancement entre 0 et 100. Permet de changer le pourcentage d'avancement.
+
+::::
 
 </Column>
 
@@ -97,14 +103,12 @@ Vous codez les appels qui permettent de récupérer la liste des tâches pour l'
 
 <Column>
 
-:::info Consultation et avancement
+:::note Déconnexion
 
-**ATTENTION : SI VOUS NE POUVEZ PAS CRÉER DE TÂCHE, VOUS NE POURREZ PAS FAIRE LA SUITE.**
+La déconnexion se fait à partir du tiroir de navigation. Elle doit être fonctionnelle dans toutes les activités avec le tiroir.
 
-Vous codez les appels pour l'écran de consultation / modification d'une tâche.
-
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/detail/{id}`** en **GET**, envoie l'id de la tâche et reçoit un TaskDetailResponse. Permet la récupération du détail de la tâche.
-- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/progress/{id}/{valeur}`** en **GET**, envoie l'id de la tâche et la nouvelle valeur d'avancement entre 0 et 100. Permet de changer le pourcentage d'avancement.
+- &#8203;<Highlight color="tip">1 point</Highlight> **`/api/id/signout`** en **POST**.
+- &#8203;<Highlight color="tip">1 point</Highlight> La déconnexion fonctionne dans toutes les activités avec tiroir de navigation.
 
 :::
 
@@ -123,7 +127,6 @@ Vous indiquerez l'URL de votre serveur dans un fichier **url-serveur.md** à la 
 
 </Column>
 
-<Column/>
 
 </Row>
 
