petites modifs de mise en page

--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -21,9 +21,8 @@ Vous allez mettre en place l'application en commençant par **l'interface graphi
 
 <Column>
 
-:::note Repository Git
+:::note Repository Git &#8203;<Highlight color="tip">2 points</Highlight>
 
-&#8203;<Highlight color="tip">2 points</Highlight> 
 Un minimum de 6 commits de tailles comparables. Au moins un commit par activité. 
 
 Il n'y a pas un commit avec tout dedans et les autres vides. Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
@@ -146,15 +145,15 @@ On a le nom de l'utilisateur courant affiché (codé en dur). Il y a les options
 
 <Column>
 
-:::note Logo
+:::note Logo &#8203;<Highlight color="tip">1 point</Highlight>
 
-&#8203;<Highlight color="tip">1 point</Highlight> Ajoutez un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
+Ajoutez un logo personnalisé à votre application. Le choix vous appartient, mais le logo doit être libre de droit.
 
 :::
 
-:::note Multilingue
+:::note Multilingue &#8203;<Highlight color="tip">2 points</Highlight>
 
-&#8203;<Highlight color="tip">2 points</Highlight> Vous devez traduire tous les textes de l'interface graphique existante en français et anglais.
+Vous devez traduire tous les textes de l'interface graphique existante en français et anglais.
 
 L'orthographe doit être correcte, les textes ne doivent pas contenir de fautes dans la version française.
 
@@ -165,9 +164,9 @@ L'orthographe doit être correcte, les textes ne doivent pas contenir de fautes 
 </Row>
 
 
-:::danger Fonctionnement global
+:::danger Fonctionnement global &#8203;<Highlight color="danger">4 points négatifs</Highlight>
 
-&#8203;<Highlight color="danger">4 points négatifs</Highlight> Votre application doit fonctionner sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 4. Essayez votre application sur un téléphone 5 pouces (Pixel 2) en mode portrait.
+Votre application doit fonctionner sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 4. Essayez votre application sur un téléphone 5 pouces (Pixel 2) en mode portrait.
 
 - Plantage de l'application &#8203;<Highlight color="danger">-1 point</Highlight>
 - Interface illisible &#8203;<Highlight color="danger">-1 point</Highlight>
