--- a/web/docs/02-tp/02-tp2.md
+++ b/web/docs/02-tp/02-tp2.md
@@ -28,9 +28,9 @@ Dans la phase 2, vous connecterez votre interface graphique de la phase 1 au ser
 
 <Column>
 
-:::note Repository Git
+:::note Repository Git &#8203;<Highlight color="tip">2 points</Highlight>
 
-&#8203;<Highlight color="tip">2 points</Highlight> Un minimum de 6 commits de tailles comparables. Tu peux viser un commit par appel au serveur implanté.
+Un minimum de 6 commits de tailles comparables. Tu peux viser un commit par appel au serveur implanté.
 
 Il n'y a pas un commit avec tout dedans et les autres vides. Les commits décrivent l'avancement du projet dans un français correct (passe Word). (Instructions : [ici](https://info.cegepmontpetit.ca/git) & [ici](../cours/git) )
 
@@ -130,9 +130,9 @@ Vous indiquerez l'URL de votre serveur dans un fichier **url-serveur.md** à la 
 
 </Row>
 
-:::danger Fonctionnement global
+:::danger Fonctionnement global &#8203;<Highlight color="danger">4 points négatifs</Highlight>
 
-&#8203;<Highlight color="danger">4 points négatifs</Highlight> Votre application doit fonctionner sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 4. Essayez votre application sur un téléphone 5 pouces (Pixel 2) en mode portrait.
+Votre application doit fonctionner sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 4. Essayez votre application sur un téléphone 5 pouces (Pixel 2) en mode portrait.
 
 - Plantage de l'application <Highlight color="danger">-1 point</Highlight>
 - Interface illisible <Highlight color="danger">-1 point</Highlight>
