--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -4,13 +4,11 @@ hide_table_of_contents: true
 
 # TP3 : CTF et suppression
 
+:::note Repository Git &#8203;<Highlight color="tip">1 point</Highlight>
+Un minimum de 4 commits de tailles comparables.
+Ces points sont conditionnés à la remise d'au moins un commit par 2 séances de cours.
 
-&#8203;<Highlight color="tip">1 point</Highlight> **Git** Un minimum de 4 commits de tailles comparables.
-Ces points sont conditionnés à la remise d'au moins un commit toutes à chaque 2 séances de cours.
-
-
-
-
+:::
 
 :::tip Suppressions des tâches
 
@@ -46,27 +44,7 @@ La suppression est implantée dans l'interface graphique. L'interface se met à 
 
 </Row>
 
-
 :::
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 :::note Améliorations
 
@@ -76,7 +54,6 @@ La suppression est implantée dans l'interface graphique. L'interface se met à 
 
 ### Gestion des erreurs
 
-
 &#8203;<Highlight color="tip">2 points</Highlight> 
 Votre application doit afficher des messages d'erreur significatifs 
 (qui indiquent une solution quand c'est possible). 
@@ -84,7 +61,6 @@ Cela inclut les cas où l'utilisateur donne de mauvaises données (validation, t
 et les erreurs d'accès au serveur. Cet aspect sera corrigé en détail sur :
 - la création d'un compte : message si les mots de passe ne concordent pas, si l'accès réseau est impossible, si le nom utilisateur est déjà pris, etc.
 - l'écran de la liste de tâches : message si pas de réseau (vous devez fournir une option pour recharger les données dans ce cas).
-
 
 **RAPPEL** : Tous les messages d'erreur doivent être traduits pour les 2 langues.
 
@@ -127,9 +103,9 @@ Notre serveur contient une faille de contrôle d'accès sur la mise à jour du p
 
 :::
 
-:::danger Attention!
+:::danger Fonctionnement global &#8203;<Highlight color="danger">5 points négatifs</Highlight>
 
-&#8203;<Highlight color="danger">5 points négatifs</Highlight> L'application fonctionne sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 5.
+L'application fonctionne sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 5.
 
 - Plantage de l'application <Highlight color="danger">-1 point</Highlight>
 - Interface illisible <Highlight color="danger">-1 point</Highlight>
