--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -10,51 +10,53 @@ Ces points sont conditionnés à la remise d'au moins un commit par 2 séances d
 
 :::
 
-:::tip Suppressions des tâches
+::::note Suppressions des tâches
 
 <Row>
 
 <Column>
 
-### Suppression dans le serveur
-
+:::tip Suppression dans le serveur
 
 &#8203;<Highlight color="tip">4 points</Highlight>
-Vous devez modifier le serveur fourni pour permettre la suppression d'une tâche. Il faut:
+Vous devez modifier le serveur fourni pour permettre la suppression d'une tâche. Il faut :
 - Ajouter une route (POST GET DELETE + url) dans un controleur.
 - Ajouter une méthode dans le service pour supprimer une tâche.
 - Utiliser le repository pour la suppression.
 
 &#8203;<Highlight color="tip">1 point</Highlight>
-Implanter le contrôle d'accès: vérifier que l'utilisateur est bien le propriétaire de la tâche avant de la supprimer.
+Implanter le contrôle d'accès : vérifier que l'utilisateur est bien le propriétaire de la tâche avant de la supprimer.
+
+:::
 
 </Column>
 
 <Column>
 
-### Suppression dans l'interface graphique
+:::tip Suppression dans l'interface graphique
 
 Vous pouvez choisir l'endroit dans l'interface où implanter la suppression (dans la liste, dans la consultation)
-ainsi que le moyen de déclencher la suppression (bouton, swipe, etc.)
+ainsi que le moyen de déclencher la suppression (bouton, swipe, etc.).
 
 &#8203;<Highlight color="tip">2 points</Highlight> 
 La suppression est implantée dans l'interface graphique. L'interface se met à jour après la suppression.
+
+:::
 
 </Column>
 
 </Row>
 
-:::
+::::
 
-:::note Améliorations
+:::::note Améliorations
 
 <Row>
 
 <Column>
 
-### Gestion des erreurs
+::::info Gestion des erreurs &#8203;<Highlight color="tip">2 points</Highlight> 
 
-&#8203;<Highlight color="tip">2 points</Highlight> 
 Votre application doit afficher des messages d'erreur significatifs 
 (qui indiquent une solution quand c'est possible). 
 Cela inclut les cas où l'utilisateur donne de mauvaises données (validation, trop court, existant, etc.), 
@@ -62,17 +64,21 @@ et les erreurs d'accès au serveur. Cet aspect sera corrigé en détail sur :
 - la création d'un compte : message si les mots de passe ne concordent pas, si l'accès réseau est impossible, si le nom utilisateur est déjà pris, etc.
 - l'écran de la liste de tâches : message si pas de réseau (vous devez fournir une option pour recharger les données dans ce cas).
 
-**RAPPEL** : Tous les messages d'erreur doivent être traduits pour les 2 langues.
+:::warning RAPPEL
+Tous les messages d'erreur doivent être traduits pour les 2 langues.
+:::
+
+::::
 
 </Column>
 
 <Column>
 
-### Attente dans l'interface graphique
+::::info Attente dans l'interface graphique &#8203;<Highlight color="tip">2 points</Highlight>
 
-Note: vous pouvez modifier le délai d'attente du serveur dans le fichier [ConfigHTTP.java](https://github.com/departement-info-cem/KickMyB-Server/blob/main/src/main/java/org/kickmyb/server/ConfigHTTP.java) en changeant la valeur dans le Thread.sleep.
+Note : vous pouvez modifier le délai d'attente du serveur dans le fichier [ConfigHTTP.java](https://github.com/departement-info-cem/KickMyB-Server/blob/main/src/main/java/org/kickmyb/server/ConfigHTTP.java) en changeant la valeur dans le Thread.sleep.
 
-&#8203;<Highlight color="tip">2 points</Highlight> Quand vous envoyez une requête au serveur, la réponse n'est pas immédiate. Pour une action vous devez:
+Quand vous envoyez une requête au serveur, la réponse n'est pas immédiate. Pour une action, vous devez :
 
 - Indiquer à l'utilisateur qu'il se passe quelque chose
 - Désactiver l'action qu'il vient de déclencher pour éviter que l'utilisateur puisse envoyer des requêtes
@@ -84,14 +90,17 @@ Pour chaque consultation (liste et consultation) vous devez :
 
 L'interface doit revenir dans un état fonctionnel après le chargement, que le résultat soit correct ou en cas d'erreur.
 
-**RAPPEL** : Tous les messages doivent être traduits pour les 2 langues.
+:::warning RAPPEL
+Tous les messages doivent être traduits pour les 2 langues.
+:::
+
+::::
 
 </Column>
 
 </Row>
 
-
-:::
+:::::
 
 :::caution Capture du drapeau / faille de sécurité du serveur
 
@@ -110,6 +119,6 @@ L'application fonctionne sans plantage et correctement. Ce pointage fonctionne e
 - Plantage de l'application <Highlight color="danger">-1 point</Highlight>
 - Interface illisible <Highlight color="danger">-1 point</Highlight>
 - Information affichée incohérente <Highlight color="danger">-1 point</Highlight>
-- Autre cas ...
+- Autre cas...
 
 :::
