--- a/web/docs/03-recettes/retrofit-01-base.mdx
+++ b/web/docs/03-recettes/retrofit-01-base.mdx
@@ -5,11 +5,11 @@ hide_table_of_contents: true
 # HTTP 1 - Retrofit de base
 
 :::tip
-ATTENTION : L'outil principal de débogage pour les appels réseaux est le network inspector dans Android Studio.
-1. Cliquer sur Fichier / File ou le symbole  ☰ en haut à gauche
-2. Choisir View / Tool Windows / AppInspection
-3. Dans la fenêtre AppInspection, choisir l'onglet **Network Inspector**
-4. Tu devrais voir apparaître les appels réseaux de ton application
+ATTENTION : L'outil principal de débogage pour les appels réseaux est le *Network Inspector* dans Android Studio.
+1. Cliquer sur Fichier / File ou le symbole  ☰ en haut à gauche.
+2. Choisir View / Tool Windows / AppInspection.
+3. Dans la fenêtre AppInspection, choisir l'onglet **Network Inspector**.
+4. Tu devrais voir apparaître les appels réseaux de ton application.
 :::
 
 [Retrofit](https://square.github.io/retrofit/) est une librairie qui permet de faire des appels HTTP de manière simple et efficace.
