TP3 = controle d'accès

--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -21,11 +21,20 @@ Ces points sont conditionnés à la remise d'au moins un commit par 2 séances d
 &#8203;<Highlight color="tip">4 points</Highlight>
 Vous devez modifier le serveur fourni pour permettre la suppression d'une tâche. Il faut :
 - Ajouter une route (POST GET DELETE + url) dans un controleur.
-- Ajouter une méthode dans le service pour supprimer une tâche.
+- Ajouter une méthode dans le **service** pour supprimer une tâche.
 - Utiliser le repository pour la suppression.
 
 &#8203;<Highlight color="tip">1 point</Highlight>
 Implanter le contrôle d'accès : vérifier que l'utilisateur est bien le propriétaire de la tâche avant de la supprimer.
+
+&#8203;<Highlight color="tip">1 point</Highlight>
+Implanter le contrôle d'accès : vérifier que l'utilisateur est bien le propriétaire de la tâche avant de la supprimer.
+
+&#8203;<Highlight color="tip">2 points</Highlight>
+Tu dois produire les tests unitaires pour la suppression d'une tâche au niveau de la couche de service:
+- Assure-toi que la suppression fonctionne si on fournit un ID correct.
+- Détermine le comportement à avoir si on fournit un ID erronné et implante un test qui valide ce comportement.
+- Valide que le contrôle d'accès fonctionne correctement.
 
 :::
 
